--- a/app/views/zones/_form.html.erb
+++ b/app/views/zones/_form.html.erb
@@ -15,7 +15,7 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
-  <div class="map">
+  <div id="map-canvas" class="map">
   Map goes here
   </div>
   <div class="actions">
