Added working html but can't place the CSS and coffeescript.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxQ-A6TUhQ1yGPwWKvANmk9Q15MiOhtDs"></script>
   <% end %>
   <%= csrf_meta_tags %>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
 </head>
 <%= content_tag 'body', data: {controller: controller.controller_path, action: controller.action_name, env: Rails.env} do %>
 
