--- a/app/views/zones/_form.html.erb
+++ b/app/views/zones/_form.html.erb
@@ -28,6 +28,7 @@
   </div>
 
    <div id="side">
+    <input id="addZone" value="Add Zone" type="button" class="navi"/>
     <input id="reset" value="Reset" type="button" class="navi"/>
     <input id="showData"  value="Show Paths (class function) " type="button" class="navi"/>
     <div   id="dataPanel">
