--- a/app/views/zones/_form.html.erb
+++ b/app/views/zones/_form.html.erb
@@ -27,20 +27,25 @@
     <%= f.text_field :name %>
   </div>
 
-   <div id="side">
-    <input id="addZone" value="Add Zone" type="button" class="navi"/>
-    <input id="reset" value="Reset" type="button" class="navi"/>
-    <input id="showData"  value="Show Paths (class function) " type="button" class="navi"/>
-    <div   id="dataPanel">
-    </div>
-  </div>
-
-
-  <div id="map-canvas" class="map">
-  Map goes here
-  </div>
 
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+
+<hr/>
+
+<div id="side">
+  <input id="addZone" value="Add Zone" type="button" class="navi"/>
+  <input id="reset" value="Reset" type="button" class="navi"/>
+  <% if false %>
+    <input id="showData"  value="Show Paths (class function) " type="button" class="navi"/>
+  <% end %>
+  <div   id="dataPanel">
+  </div>
+</div>
+
+
+<div id="map-canvas" class="map">
+  Map goes here
+</div>
