allow for removing zones

--- a/app/views/zones/index.html.erb
+++ b/app/views/zones/index.html.erb
@@ -32,6 +32,7 @@
 <div id="side">
   <input id="addZone" value="Add Zone" type="button" class="navi"/>
   <input id="reset" value="Reset" type="button" class="navi"/>
+  <input id="removeZone" value="Remove Selected Zone" type="button" class="navi" disabled="disabled"/>
   <% if false %>
     <input id="showData"  value="Show Paths (class function) " type="button" class="navi"/>
   <% end %>
