make polygon creation work.  load zones from db on page load

--- a/app/assets/stylesheets/zones.css.scss
+++ b/app/assets/stylesheets/zones.css.scss
@@ -94,6 +94,9 @@ body[data-controller='zones'] {
   #map-canvas {
     height: 500px;
   }
+  #newForm {
+    display: none;
+  }
 }
 
 body[data-controller='zones'][data-action='new'],
