implement edit form

--- a/app/assets/stylesheets/zones.css.scss
+++ b/app/assets/stylesheets/zones.css.scss
@@ -97,6 +97,9 @@ body[data-controller='zones'] {
   #newForm {
     display: none;
   }
+  #editForm {
+    display: none;
+  }
 }
 
 body[data-controller='zones'][data-action='new'],
